[gd_scene load_steps=4 format=3 uid="uid://blvliryx7puul"]

[ext_resource type="Script" uid="uid://dpw3oq22300v5" path="res://UI/journal_menu.gd" id="1_0sl3d"]
[ext_resource type="Texture2D" uid="uid://chk5qxglu5xxu" path="res://map/Art Assets/Player HUD/Upgrade_HUD.png" id="1_mcuui"]
[ext_resource type="Texture2D" uid="uid://cacifihv143uq" path="res://graphics/ui_icons/close.png" id="2_m1x0y"]

[node name="JournalMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0sl3d")

[node name="BookBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mcuui")
expand_mode = 1

[node name="Menu_Layer" type="Control" parent="BookBackground"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 105.0
offset_top = 56.0
offset_right = -97.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="BookBackground/Menu_Layer"]
layout_mode = 0
offset_left = 67.0
offset_top = 8.0
offset_right = 154.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Journal"

[node name="InfoText" type="Label" parent="BookBackground/Menu_Layer"]
layout_mode = 0
offset_left = 33.0
offset_top = 61.0
offset_right = 185.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 6
theme_override_font_sizes/font_size = 17
text = "In the journal you will find discovered notes and the tutorial tips."
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BookBackground/Menu_Layer"]
layout_mode = 0
offset_left = 261.0
offset_top = 64.0
offset_right = 391.0
offset_bottom = 154.0

[node name="BtnTutorial" type="Button" parent="BookBackground/Menu_Layer/VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Tutorial"

[node name="BtnNotes" type="Button" parent="BookBackground/Menu_Layer/VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Notes"

[node name="Tutorial_Layer" type="Control" parent="BookBackground"]
visible = false
anchors_preset = 0
offset_left = 105.0
offset_top = 55.0
offset_right = 543.0
offset_bottom = 312.0

[node name="LeftPage_Text" type="RichTextLabel" parent="BookBackground/Tutorial_Layer"]
layout_mode = 0
offset_right = 213.0
offset_bottom = 257.0

[node name="RightPage_Text" type="RichTextLabel" parent="BookBackground/Tutorial_Layer"]
layout_mode = 0
offset_left = 222.0
offset_right = 435.0
offset_bottom = 257.0

[node name="NavButtons" type="Control" parent="BookBackground/Tutorial_Layer"]
anchors_preset = 0
offset_right = 440.0
offset_bottom = 256.0

[node name="Btn_Prev" type="Button" parent="BookBackground/Tutorial_Layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 39.0
offset_top = 205.0
offset_right = 189.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Previous page"

[node name="Btn_Next" type="Button" parent="BookBackground/Tutorial_Layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 242.0
offset_top = 205.0
offset_right = 392.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Next Page"

[node name="Btn_BackToMenu" type="Button" parent="BookBackground/Tutorial_Layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 39.0
offset_top = 205.0
offset_right = 189.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="Notes_layer" type="Control" parent="BookBackground"]
visible = false
anchors_preset = 0
offset_left = 105.0
offset_top = 52.0
offset_right = 542.0
offset_bottom = 313.0

[node name="LeftPage_Visuals" type="Control" parent="BookBackground/Notes_layer"]
anchors_preset = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 211.0
offset_bottom = 258.0

[node name="TextureRect" type="TextureRect" parent="BookBackground/Notes_layer/LeftPage_Visuals"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftPage_Visuals2" type="Control" parent="BookBackground/Notes_layer"]
anchors_preset = 0
offset_left = 226.0
offset_right = 434.0
offset_bottom = 257.0

[node name="TextureRect" type="TextureRect" parent="BookBackground/Notes_layer/LeftPage_Visuals2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NavButtons" type="Control" parent="BookBackground/Notes_layer"]
anchors_preset = 0
offset_right = 440.0
offset_bottom = 256.0

[node name="Btn_Prev" type="Button" parent="BookBackground/Notes_layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 39.0
offset_top = 205.0
offset_right = 189.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Previous page"

[node name="Btn_Next" type="Button" parent="BookBackground/Notes_layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 242.0
offset_top = 205.0
offset_right = 392.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Next Page"

[node name="Btn_BackToMenu" type="Button" parent="BookBackground/Notes_layer/NavButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_left = 39.0
offset_top = 205.0
offset_right = 189.0
offset_bottom = 248.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 75.0
offset_right = 517.0
offset_bottom = 91.0
icon = ExtResource("2_m1x0y")

[connection signal="pressed" from="BookBackground/Menu_Layer/VBoxContainer/BtnTutorial" to="." method="_on_btn_tutorial_pressed"]
[connection signal="pressed" from="BookBackground/Menu_Layer/VBoxContainer/BtnNotes" to="." method="_on_btn_notes_pressed"]
[connection signal="pressed" from="BookBackground/Tutorial_Layer/NavButtons/Btn_BackToMenu" to="." method="_on_btn_back_to_menu_pressed"]
[connection signal="pressed" from="BookBackground/Notes_layer/NavButtons/Btn_BackToMenu" to="." method="_on_btn_back_to_menu_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
